--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -42,5 +42,8 @@ dependencies {
 
     //play service auth
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
+
+    //Fast Android Networking
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
