--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -11,10 +11,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity"></activity>
-        <activity android:name=".LogInGoogle" >
+        <activity android:name=".ChecklistDetailActivity"></activity>
+        <activity android:name=".ChecklistActivity">
+        </activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".LogInGoogle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
